samples/_failures_safe/1761189877_f4d029_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e04bd5c5.c: In function ‘main’:
./samples/SAFE/__tmp_e04bd5c5.c:127:57: error: unterminated argument list invoking macro "MATRIX_ADD"
  127 |         MATRIX_ADD(result, matrix1, matrix2, rows1, cols
      |                                                         ^
./samples/SAFE/__tmp_e04bd5c5.c:127:9: error: ‘MATRIX_ADD’ undeclared (first use in this function)
  127 |         MATRIX_ADD(result, matrix1, matrix2, rows1, cols
      |         ^~~~~~~~~~
./samples/SAFE/__tmp_e04bd5c5.c:127:9: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_e04bd5c5.c:127:19: error: expected ‘;’ at end of input
  127 |         MATRIX_ADD(result, matrix1, matrix2, rows1, cols
      |                   ^
      |                   ;
./samples/SAFE/__tmp_e04bd5c5.c:127:9: error: expected declaration or statement at end of input
  127 |         MATRIX_ADD(result, matrix1, matrix2, rows1, cols
      |         ^~~~~~~~~~
./samples/SAFE/__tmp_e04bd5c5.c:127:9: error: expected declaration or statement at end of input
